Fix word breaks in Chrome
This fixes word wrapping on the filename for a comment on a PR. A previous commit fixed this problem in Firefox, but not Chrome.

Fixes #16248

--- a/web_src/less/helpers.less
+++ b/web_src/less/helpers.less
@@ -27,6 +27,7 @@
 
 .word-break {
   word-wrap: break-word !important;
+  word-break: break-word;
 }
 
 .ellipsis {
